# cargo-hold

./: .taplo.toml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  lefthook.yml  rustfmt.toml
.config/: nextest.toml
.github/actions/cargo-hold-install/: action.yaml
.github/actions/rust-cache/: action.yaml
.github/workflows/: build.yaml  cross-build.yaml  publish.yaml
src/: cli.rs  commands.rs  discovery.rs  error.rs  gc.rs  hashing.rs  lib.rs  logging.rs  main.rs  metadata.rs  state.rs  timestamp.rs
src/cli/: mod.rs  tests.rs
src/commands/: anchor.rs  bilge.rs  gc_options.rs  heave.rs  mod.rs  salvage.rs  stow.rs  tests.rs  voyage.rs
src/gc/: artifacts.rs  auto_cap.rs  cargo.rs  cleanup.rs  config.rs  mod.rs  size.rs  tests.rs
src/metadata/: mod.rs  tests.rs
src/state/: mod.rs  tests.rs
src/timestamp/: mod.rs  tests.rs
tests/: cargo_cleanup_test.rs  entry.rs  gc_algorithm_tests.rs  gc_tests.rs  integration_test.rs
tests/common/: mod.rs
tests/the_tests/: cargo_cleanup_test.rs  gc_tests.rs  helpers.rs  integration_test.rs  mod.rs
