[package]
authors = ["Ellipsis Labs Team", "Brenden Matthews <brenden@brndn.io"]
categories = [
  "development-tools::cargo-plugins",
  "development-tools::build-utils",
]
description = "cargo-hold: A CI tool to ensure Cargo's incremental compilation is reliable by managing your caches intelligently"
documentation = "https://docs.rs/cargo-hold"
edition = "2024"
homepage = "https://github.com/Ellipsis-Labs/cargo-hold"
keywords = ["cargo", "ci", "cache", "build", "incremental"]
license = "MIT"
name = "cargo-hold"
readme = "README.md"
repository = "https://github.com/Ellipsis-Labs/cargo-hold"
rust-version = "1.88.0"
version = "1.3.2"

[[bin]]
name = "cargo-hold"
path = "src/main.rs"

[lib]
name = "cargo_hold"
path = "src/lib.rs"

[dependencies]
blake3    = { version = "1.8.5", features = ["rayon", "mmap"] }
clap      = { version = "4.6.1", features = ["derive", "cargo", "env"] }
git2      = "0.20.4"
home      = "0.5.12"
memmap2   = "0.9.10"
miette    = { version = "7.6.0", features = ["fancy"] }
rayon     = "1.12.0"
regex     = "1.12.3"
rkyv      = { version = "0.8.16", features = ["std", "alloc"] }
thiserror = "2.0.18"
walkdir   = "2.5.0"

[dev-dependencies]
assert_fs  = "1.1.3"
filetime   = "0.2.27"
predicates = "3.1.4"
proptest   = "1.11.0"
tempfile   = "3.27.0"

[profile.release]
codegen-units = 1
lto           = true

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
